fix: <u> replace to <ins>

--- a/english/word/simple-word/markdown/p1-p2.md
+++ b/english/word/simple-word/markdown/p1-p2.md
@@ -138,7 +138,7 @@
     - In spite of(不管；尽管) what happened he never lost the will to live.
     - She willed her eyes to stay open.
 - willing adj. 愿意的、乐意的
-    - Passengers will not <u>be willing to</u> pay more.
+    - Passengers will not <ins>be willing to</ins> pay more.
 - do
     - aux. v. Do you love me?
     - 加强语气 I do love you.
@@ -236,7 +236,7 @@
 - follow
     - vt. 跟随；遵照；领会；理解
     - It is advisable to follow the FSA advice.
-    - his power to follow an abstract <u>train of thought想法</u> was very limited
+    - his power to follow an abstract <ins>train of thought想法</ins> was very limited
 - write
     - writer
 - may
@@ -251,7 +251,7 @@
     - Happiness is not a point of future.
     - point to 指向，指明
     - You want to point to where it's useful for employees to go to.
-    - <u>points out(指出)</u> that where are enough people.
+    - <ins>points out(指出)</ins> that where are enough people.
 - most
     - adj.: Most jobs are multidimensional([ˌmʌltidɪˈmɛnʃənəl] adj. 多面的，多维的)
 - part
