--- a/english/word/simple-word/markdown/p15-p17.md
+++ b/english/word/simple-word/markdown/p15-p17.md
@@ -18,7 +18,7 @@
 - warn
     - v. 警告，告诫
     - warn of 发出...的警告
-        - ...to <u>warn of</u> the doom(厄运) of biomedical([ˌbaɪoʊˈmedɪkl] 生物医学) research.
+        - ...to <ins>warn of</ins> the doom(厄运) of biomedical([ˌbaɪoʊˈmedɪkl] 生物医学) research.
     - warning n. 警告，告诫
 - wealth
     - n. 财富，丰富
@@ -64,7 +64,7 @@
     - **把...放入**，发布，公布
         - I started posting them on Twitter.
     - 带来
-        - It would post a challenge to its <u>farming industry(农业产业)</u>.
+        - It would post a challenge to its <ins>farming industry(农业产业)</ins>.
     - 邮递
         - I'll send the original(起源的) to you by post.
     - postal [ˈpoʊstl] adj. 邮政的，邮递的
@@ -131,7 +131,7 @@
     - reshape v. 重塑；改组
 - shock
     - n. 震惊，震动
-    - <u>No shock there</u>, considering...
+    - <ins>No shock there</ins>, considering...
         - no shock there 毫不震惊的是
     - shake v. 摇
 - south
@@ -177,7 +177,7 @@
 - root
     - n. 根部 v. 生根
     - take root in 扎根于
-        - Which <u>took root in</u> Europe.
+        - Which <ins>took root in</ins> Europe.
 - screen
     - n. 屏风；**屏幕**  vt. **检查**，掩蔽，放映；甄别
     - 屏幕
@@ -223,7 +223,7 @@
         - wallet 钱包
         - bullet [ˈbʊlɪt] 子弹
     - dietary adj. 与饮食相关的，饮食的
-    - Mr.Song has studied the <u>diet/dietary</u> habits of 50000 men.
+    - Mr.Song has studied the <ins>diet/dietary</ins> habits of 50000 men.
     - poet [ˈpoʊət] n. 诗人
 - double
     - adj. 双倍的，双重的
@@ -240,7 +240,7 @@
         - present 指精心包装的礼物
         - gift 广泛的礼物
     - 天赋
-        - gifted people<u>**s**</u> 有天赋的种族
+        - gifted people<ins>**s**</ins> 有天赋的种族
 - helicopter [ˈhelɪkɑːptər]
     - n. 直升机
 - ill
@@ -257,7 +257,7 @@
         - mass-market(大众市场) labels such as Zara，H&M，and Uniqlo.
         - mass n. 一团; 大堆; 大量; 块; 民众; 大部分;
     - label...as 把...称为
-        - Today we have a tendency([ˈtendənsi] 趋势) to <u>label</u> obesity([oʊˈbisəti] 肥胖) <u>as</u> a
+        - Today we have a tendency([ˈtendənsi] 趋势) to <ins>label</ins> obesity([oʊˈbisəti] 肥胖) <ins>as</ins> a
           disgrace([dɪsˈɡreɪs] 耻辱).
 - manner
     - n. 态度，举止；风度；方法，方式
@@ -309,7 +309,7 @@
     - com- 共同，一起
     - People complained that buses were late and infrequent([ɪnˈfrikwənt] 罕见).
     - complaint n. 抱怨
-        - Students have <u>voiced their complaints</u> about homework.
+        - Students have <ins>voiced their complaints</ins> about homework.
         - voice one's complaint 说明某人的抱怨
 - couple
     - n. 夫妻；几个，一些（a couple of）
@@ -342,7 +342,7 @@
     - n. 课；**教训**；（pl.）课程
     - lec- 说话
     - **教训**
-        - We can choose to <u>look for(吸取)</u> the lesson we're meant to learn.
+        - We can choose to <ins>look for(吸取)</ins> the lesson we're meant to learn.
 - magazine
     - n. 杂志，期刊
     - mag- == mac- == mat- 揉，捏；力量
@@ -380,7 +380,7 @@
     - vt. 使高兴
     - Be easily pleased
     - pleasure [ˈpleʒər] n. 高兴，愉悦
-        - Happiness is <u>more than(+n. 不仅仅)</u> pleasure([ˈpleʒər]) without pain. 幸福不仅仅是没有痛苦的快乐
+        - Happiness is <ins>more than(+n. 不仅仅)</ins> pleasure([ˈpleʒər]) without pain. 幸福不仅仅是没有痛苦的快乐
     - pleasant adj. 愉悦的
         - He had such a pleasant, readable style. 他的写作风格令人愉快，读起来很有趣
     - pleasurable adj. 愉快的
@@ -420,7 +420,7 @@
     - wish vs hope
         - wish to do, wish +从句, wish sb to do
         - hope to do, hope +从句
-    - I <u>wish/hope</u> him to study hard at English and get better grades next term.
+    - I <ins>wish/hope</ins> him to study hard at English and get better grades next term.
 - classical
     - adj. 古典的，经典的
 - drop
@@ -448,7 +448,7 @@
         - permit 允许
         - emit 排放
     - 允许...进入（被动）
-        - Suppose(假设) your cousin([ˈkʌzn] 表哥) LiMing has just <u>been admitted</u> to a university.
+        - Suppose(假设) your cousin([ˈkʌzn] 表哥) LiMing has just <ins>been admitted</ins> to a university.
     - 承认（主动）
         - Researchers admit that their study does not answer the question...
     - **admission** n. 允许进入；承认
