--- a/english/word/simple-word/markdown/p18-p20.md
+++ b/english/word/simple-word/markdown/p18-p20.md
@@ -30,7 +30,7 @@
 - worry
     - v. 担心；n. 担心
     - worry about 担心
-        - People in developing countries <u>worry about</u> migration(移民).
+        - People in developing countries <ins>worry about</ins> migration(移民).
             - immigration [ˌɪmɪˈɡreɪʃn] 移入民
             - emigration [ˌɛmɪˈɡreʃən] 移出民
 - zone
@@ -129,7 +129,7 @@
 - solar  [ˈsoʊlər]
     - adj. 太阳的，日光的
     - sol- 太阳；一个，单独
-    - Wind and solar power <u>accounted for</u> more than 10 percent.
+    - Wind and solar power <ins>accounted for</ins> more than 10 percent.
         - **accounted for** 占...比例（后边有数字）；解释
 - strange [streɪndʒ]
     - adj. 奇怪的，奇异的
@@ -147,7 +147,7 @@
 - worst
     - adj./adv. 最坏的，最差的
     - bad, worse, worst
-    - <u>It was by far(到目前为止)</u> the worst speech he had ever made.
+    - <ins>It was by far(到目前为止)</ins> the worst speech he had ever made.
 - athlete [ˈæθliːt]
     - n. 运动员；体育家
 - black
@@ -208,15 +208,15 @@
     - **a piece of + 不可数 n.**
         - a piece of boiled beef/cake/cucumber
     - 拼合，整合 piece together
-        - Pearson has <u>pieced together</u> the work(研究成果) of <u>hundreds of(数以百计的)</u> researchers.
+        - Pearson has <ins>pieced together</ins> the work(研究成果) of <ins>hundreds of(数以百计的)</ins> researchers.
 - postal
     - adj. 邮政的，邮递的
 - pride
     - n. 自豪
     - take pride in 以...为豪
-        - Stratford, says Friedman, <u>takes pride in</u> its independent(独立的) voice.
+        - Stratford, says Friedman, <ins>takes pride in</ins> its independent(独立的) voice.
     - proud [praʊd] adj. 自豪的 be proud of
-        - Stratford <u>is</u> most <u>pound of</u> its nonconformist([ˌnɑnkənˈfɔrmɪst] 不墨守成规的) image.
+        - Stratford <ins>is</ins> most <ins>pound of</ins> its nonconformist([ˌnɑnkənˈfɔrmɪst] 不墨守成规的) image.
     - price
 - province [ˈprɑːvɪns]
     - n. 省；领域，范围
@@ -243,7 +243,7 @@
 - tie
     - vt. **栓，扎**；使有联系； n. 联系；**平局** vi. **不分胜负**
     - be tied to 与...相关
-        - "<u>A substantial([səbˈstænʃl] 重大的，大量的) part(很大一部分)</u>" of executive(管理人员) pay is now tied to performance(表现 -> 业绩).
+        - "<ins>A substantial([səbˈstænʃl] 重大的，大量的) part(很大一部分)</ins>" of executive(管理人员) pay is now tied to performance(表现 -> 业绩).
 - verbal
     - adj. **口头的；用文字的**；动词的(verb)
 - voice
@@ -270,7 +270,7 @@
     - I have got a cold
 - everyday
     - adj.(+n.) 每天的，日常的
-        - Many everyday tasks <u>take</u> a surprising <u>toll on</u> the environment.
+        - Many everyday tasks <ins>take</ins> a surprising <ins>toll on</ins> the environment.
             - take toll on 对...造成损害
     - every day adv.
         - We unconsciously([ʌnˈkɑnʃəsli] 无意识的) imitate(模拟) the behavior we see every day.
@@ -288,7 +288,7 @@
 - host
     - n. 主人，东道主；许多
     - 许多 a host of
-        - Hugs(拥抱) can bring <u>a host of</u> health benefits to your body and mind.
+        - Hugs(拥抱) can bring <ins>a host of</ins> health benefits to your body and mind.
 - humor/humour [ˈhjuːmə(r)]
     - n. 幽默，诙谐
     - sense of humor 幽默感
@@ -303,7 +303,7 @@
 - nor
     - conj./adv. 也不
     - neither nor 既不...也不
-        - We <u>neither</u> understand <u>nor</u> respect each other.
+        - We <ins>neither</ins> understand <ins>nor</ins> respect each other.
 - ought to
     - modal v. 应该
 - reply
@@ -342,7 +342,7 @@
     - do- 给予
         - donate v. 赠送
     - out of date 过时
-        - But the discussions now seem <u>out of date</u>.
+        - But the discussions now seem <ins>out of date</ins>.
     - outdated adj. 过时的；陈旧的（在阅读题选项中经常是错误选项）
     - update vt. 更新，使现代化； n. 最新报告
 - again
