--- a/english/word/simple-word/markdown/p21-p23.md
+++ b/english/word/simple-word/markdown/p21-p23.md
@@ -3,9 +3,9 @@
 - touch
     - vt. 触摸；触动；接触
     - touch on 触碰；涉及
-        - McAfee indeed(确实) <u>touched on</u> this point in their book. McAfee 确实在他们的书中提到了这一点。
+        - McAfee indeed(确实) <ins>touched on</ins> this point in their book. McAfee 确实在他们的书中提到了这一点。
     - in touch with 与...相接触/联系
-        - Healthy optimism([ˈɑːptɪmɪzəm] 乐观) means being <u>in touch with</u> readily. ???
+        - Healthy optimism([ˈɑːptɪmɪzəm] 乐观) means being <ins>in touch with</ins> readily. ???
 - transportation
     - n. 交通工具，运输
     - transport v./n. 交通；运输
@@ -37,7 +37,7 @@
     - **manage** v. 经营，管理；设法做
         - manage to do sth. 设法做某事（并取得成功）
         - try to do （尚未取得成功）
-            - We managed to reach the top of the mountain，and half an hour later we began to <u>ascend(提升, asc)/descend(下降, desc)/decline(下降)/plunge(暴跌)</u>.
+            - We managed to reach the top of the mountain，and half an hour later we began to <ins>ascend(提升, asc)/descend(下降, desc)/decline(下降)/plunge(暴跌)</ins>.
     - management n. 经营，管理
 - aid [eɪd]
     - n./vt. 帮助（官方）
@@ -87,7 +87,7 @@
         - We need warm clothing for the winter.
 - complaint
     - n. 抱怨；诉苦
-    - Students have <u>voiced their complaints</u> about homework.
+    - Students have <ins>voiced their complaints</ins> about homework.
         - voice one's complaint
 - correct
     - adj. 正确的，对的； vt. 改正，纠正
@@ -176,7 +176,7 @@
     - n. 冬季
 - pleasure [ˈpleʒər]
     - n. 高兴，愉快
-    - Happiness is <u>more than pleasure</u> without pain.
+    - Happiness is <ins>more than pleasure</ins> without pain.
         - more than + n. 不仅仅
         - more than + 数字 超过
 - addition
@@ -220,7 +220,7 @@
 - cry
     - vi. 哭；vt. 叫喊，大喊大叫
     - cry out for 急需
-        - The endless(无尽) legal([ˈliːɡl] 法律) battles <u>cry out for</u> Congress([ˈkɑːŋɡrəs] 国会) to act.
+        - The endless(无尽) legal([ˈliːɡl] 法律) battles <ins>cry out for</ins> Congress([ˈkɑːŋɡrəs] 国会) to act.
     - rallying cry 集结号角
 - red
 - club
@@ -284,7 +284,7 @@
 - cap
     - n. **最高限额**；帽子；盖，罩；vt. **胜过，超过**；覆盖
     - 最高限额
-        - ...<u>if the cap were lifted(上限)(假设条件，虚拟语气（表示与现实相反的假设）)</u>, increasing GDP by 0.6%.
+        - ...<ins>if the cap were lifted(上限)(假设条件，虚拟语气（表示与现实相反的假设）)</ins>, increasing GDP by 0.6%.
           如果取消上限，GDP将增加0.6%
     - 胜过
         - What an amazing story. Can anyone cap that？
@@ -347,7 +347,7 @@
 - rush
     - vt. 匆忙的；冲
     - rush to 急忙做
-        - The TSA(运输管理局) is now <u>rushing to</u> get new screeners(审查员 -> 安检人员).
+        - The TSA(运输管理局) is now <ins>rushing to</ins> get new screeners(审查员 -> 安检人员).
 - arrival
     - n. 到达
 - lunch
@@ -368,7 +368,7 @@
         - produce v. 生产
         - reduce v. 减少
         - introduce into 引入
-            - The gardens of the homeless <u>introduce form into</u> an urban environment.无家可归者的花园为城市环境引入了形式
+            - The gardens of the homeless <ins>introduce form into</ins> an urban environment.无家可归者的花园为城市环境引入了形式
 - motorist
     - n. 驾车者，开车的人
     - mot- 动
