--- a/english/word/simple-word/markdown/p24-p26.md
+++ b/english/word/simple-word/markdown/p24-p26.md
@@ -12,7 +12,7 @@
 - peculiar [pɪˈkjuːliər]
     - adj. 特有的，独特的；奇怪的，古怪的
     - peculiar to sth 某物所特有的
-        - the geographic([ˌdʒiə'ɡræfɪk] adj. 地理学的) conditions <u>peculiar to America</u>.
+        - the geographic([ˌdʒiə'ɡræfɪk] adj. 地理学的) conditions <ins>peculiar to America</ins>.
 - sudden
 - pen
 - strongly
@@ -158,7 +158,7 @@
     - frequency n. 频率
 - admire
     - vt. 钦佩，羡慕；称赞，夸奖（同辈）
-    - I admire him for his <u>frequent Chinese(流利的中文)</u>.
+    - I admire him for his <ins>frequent Chinese(流利的中文)</ins>.
 - apple
     - n. 苹果；苹果树
     - Adam's apple 喉结
@@ -290,7 +290,7 @@
     - mov- == mob- == mot- 移动
 - flash
     - vi./n. 闪光，闪现
-    - Subjects(实验对象) (exposed to fast-food flashes) also <u>tend to(倾向于)</u> think a musical piece lasts too long. 实验对象在接触快餐画面后，也倾向于觉得一首音乐持续得太久
+    - Subjects(实验对象) (exposed to fast-food flashes) also <ins>tend to(倾向于)</ins> think a musical piece lasts too long. 实验对象在接触快餐画面后，也倾向于觉得一首音乐持续得太久
 - everywhere
     - adv. 各处，任何地方
 - hotel
@@ -312,7 +312,7 @@
         - **involve** [ɪnˈvɑːlv] v. 涉及，卷入
     - a two-volume report 两卷报道
     - n. 量
-        - <u>The IT industry(信息技术产业)</u> produces about <u>the same</u> volume of greenhouse gases <u>as</u> the world's airlines(航空业) do.
+        - <ins>The IT industry(信息技术产业)</ins> produces about <ins>the same</ins> volume of greenhouse gases <ins>as</ins> the world's airlines(航空业) do.
             - the same as 和...一样
     - 音量
         - Beethoven's habit of increasing the volume.
@@ -360,7 +360,7 @@
     - n. 借口
         - ...cloaking([kloʊk] 遮掩) his exit in the usual vague([veɪɡ] 模糊的) excuses
     - 为...辩解
-        - People in large cities <u>tend to(往往)</u> excuse criminals(罪犯).
+        - People in large cities <ins>tend to(往往)</ins> excuse criminals(罪犯).
 - location
     - n. 位置，场所
     - loc- 位置
@@ -394,7 +394,7 @@
         - publish 出版
     - public adj. 平民的，大众的；n. 平民，大众，公众
         - public transportation 公共交通
-        - Men <u>tend to(往往)</u> talk more in public than women.
+        - Men <ins>tend to(往往)</ins> talk more in public than women.
 - colony [ˈkɑːləni]
     - n. 殖民地，聚民区
     - col- == cul- 培养
