--- a/english/word/simple-word/markdown/p27-p29.md
+++ b/english/word/simple-word/markdown/p27-p29.md
@@ -45,7 +45,7 @@
     - n. 大楼；街区；障碍物； vt. 堵塞；阻碍
     - it is a block of sugar.
     - 街区
-        - EU remains(依旧是) the world's largest <u>trading block(贸易集团、贸易体)</u>.
+        - EU remains(依旧是) the world's largest <ins>trading block(贸易集团、贸易体)</ins>.
     - 堵塞；阻碍
         - Some Congress members are trying to block the plan.
 - twelve
@@ -55,11 +55,11 @@
 - shut [ʃʌt]
     - v. 关，闭
     - shut out 把...拒之门外
-        - ...<u>shut out</u> the feverish([ˈfiːvərɪʃ] 狂热的、极度兴奋的) fashion world 把那个狂热的时尚世界关在门外
+        - ...<ins>shut out</ins> the feverish([ˈfiːvərɪʃ] 狂热的、极度兴奋的) fashion world 把那个狂热的时尚世界关在门外
     - shut down 闭店，关门
-        - As much of Mexico City <u>shut down</u> at the height of a panic(恐慌)...
+        - As much of Mexico City <ins>shut down</ins> at the height of a panic(恐慌)...
     - shut up 闭嘴
-        - We are <u>shut up</u> in schools.
+        - We are <ins>shut up</ins> in schools.
 - truck [trʌk]
     - n. 卡车
     - tra- == tru- 拖着
@@ -84,7 +84,7 @@
     - n. 汽车
     - auto- 自动
     - motor/car/**vehicle** [ˈviːəkl ] 汽车
-        - Rules require auto companies to <u>bring</u> their vehicles <u>into compliance([kəmˈplaɪəns])</u>.
+        - Rules require auto companies to <ins>bring</ins> their vehicles <ins>into compliance([kəmˈplaɪəns])</ins>.
           法规要求汽车公司使他们的车辆符合法规要求
             - bring...into compliance 使...符合（规定、标准、法规）
 - alcohol [ˈælkəhɔːl]
@@ -223,7 +223,7 @@
     - It never rains but it pours. 祸不单行
     - 全身心投入
         - Imagining you are pouring your heart out to someone.
-    - They spend the night <u>pouring cash into(投入大量资金到某个项目、产业或地方)</u> the hotels and restaurants.
+    - They spend the night <ins>pouring cash into(投入大量资金到某个项目、产业或地方)</ins> the hotels and restaurants.
       他们整晚把钱花在酒店和餐馆上
 - doubtful [ˈdaʊtfl]
     - adj. 拿不定主意的，不确定的；怀疑的
@@ -241,7 +241,7 @@
     - adj. 值得的（worthy of）；值得尊敬的
     - worth n. 价值，意义； adj. 值得的
         - be worth doing sth. 值得做sth.
-            - It <u>is worth making</u> an important distinction([dɪˈstɪŋkʃn] 区别).
+            - It <ins>is worth making</ins> an important distinction([dɪˈstɪŋkʃn] 区别).
     - worthless adj. 没用的，无价值的
 - newsroom
     - n. 新闻编辑室
@@ -267,7 +267,7 @@
 - favorite/favourite [ˈfeɪvərɪt]
     - adj. 特别喜爱的 n. 偏袒；特别喜爱的人或事
     - 偏袒 play favorites
-        - Official must not be allowed to <u>play favorites</u> in providing information...
+        - Official must not be allowed to <ins>play favorites</ins> in providing information...
 - supermarket
 - bold [boʊld]
     - adj. **勇敢的；鲁莽的**；黑体的
@@ -291,7 +291,7 @@
     - adv. 仅；只；唯；单独地
     - sol- 太阳，独自
         - solar adj. 太阳的
-    - Few Americans <u>attribute</u> this solely <u>to</u> such obvious causes. 很少有美国人把这完全归因于如此明显的原因
+    - Few Americans <ins>attribute</ins> this solely <ins>to</ins> such obvious causes. 很少有美国人把这完全归因于如此明显的原因
         - attribute...to... 把...归因于...
 - inner
     - adj. 内部的，核心的
@@ -345,7 +345,7 @@
         - mental health 心理健康
 - indifferent
     - adj. 漠不关心的；冷漠的
-    - 如果出现在<u>阅读题作者态度</u>题中是必错选项
+    - 如果出现在<ins>阅读题作者态度</ins>题中是必错选项
 - cigarette/cigaret
     - n. 香烟，卷烟
 - surely
@@ -392,7 +392,7 @@
     - adv. 相似地；类似地
     - similar adj. 相似的，类似的
         - be similar to 类似于
-        - The bills(法案) <u>are similar to</u> a measure[ˈmeʒər] recently adopted(采纳) in California.
+        - The bills(法案) <ins>are similar to</ins> a measure[ˈmeʒər] recently adopted(采纳) in California.
           这些法案与加州最近采纳的一项措施相似
     - similarity n. 相似，类似
 - bottle
@@ -437,10 +437,10 @@
         - miracle n. 奇迹 [ˈmɪrəkl]
 - myth
     - n. 神话
-    - <u>They perpetuate([pərˈpetʃueɪt] 他们使...延续/维持/长久存在)</u> the myth of the lone genius.
+    - <ins>They perpetuate([pərˈpetʃueɪt] 他们使...延续/维持/长久存在)</ins> the myth of the lone genius.
 - cotton [ˈkɑːtn]
     - n. 棉花；棉线
-    - Adam Davidson relates(叙述) a joke from <u>cotton country(美国)</u>.
+    - Adam Davidson relates(叙述) a joke from <ins>cotton country(美国)</ins>.
 - unrealistic
     - adj. 不切实际的；不真实的
 - insecurity [ˌɪnsɪˈkjʊrɪti]
