--- a/english/word/simple-word/markdown/p3-p5.md
+++ b/english/word/simple-word/markdown/p3-p5.md
@@ -150,7 +150,7 @@
     - too...to 太...不能: A job's starting salary seems too small to satisfy an emerging adult.
 - last
     - adj. 最近的；最后的； adv. 上一次；最后； v. 持续
-    - 与过去时连用，adj. 最近的 adv. 上一次: Its lawmakers gave <u>preliminary(初步的)</u> approval last week to a law.
+    - 与过去时连用，adj. 最近的 adv. 上一次: Its lawmakers gave <ins>preliminary(初步的)</ins> approval last week to a law.
     - What does the author argue in the last paragraph?
     - v.: Formerly it lasted three days...
 - before
@@ -204,7 +204,7 @@
 - while
     - conj. 尽管(位于句首): While their parents were content to work long hours young people value flexibility.
     - conj. 当...的时候(+doing): saving them money while helping eh environment.
-    - conj. 然而(位于句中): They can smell one type of flower but not another, while others are <u>sensitive(敏感的)</u> to the smells of both flowers.
+    - conj. 然而(位于句中): They can smell one type of flower but not another, while others are <ins>sensitive(敏感的)</ins> to the smells of both flowers.
 - age
     - 时代: digital age, age of AI
 - want
@@ -270,7 +270,7 @@
     - adv. 宁可: Kids would rather play (then study).
         - would rather A (than B): 宁愿A（也不愿B）
     - **A rather than B: 是A而不是B**
-        - Good memory results from <u>intuitive(天生的)</u> rather than exercises.
+        - Good memory results from <ins>intuitive(天生的)</ins> rather than exercises.
 - same
 - less
     - little 比较级
@@ -319,6 +319,6 @@
 - **instead**
     - adv. 反而(表递进): The french tax is not just a unilateral. Instead, the digital services tax is part of a much larger trend.
     - adv. 代替: A instead of B/A rather than b: 是A而不是B
-        - Buy all your clothes at once with a stylist instead of <u>shopping</u> alone, one article of clothing at a time.
+        - Buy all your clothes at once with a stylist instead of <ins>shopping</ins> alone, one article of clothing at a time.
 - off
     - adv. 离(开): 10% off, take off, turn off/on
