--- a/english/word/simple-word/markdown/p30-p32.md
+++ b/english/word/simple-word/markdown/p30-p32.md
@@ -28,9 +28,9 @@
 - shoulder
     - n. 肩膀； vt. 承担；扛
     - shoulder to shoulder 肩并肩
-        - Two disabled(adj. 残) men are running <u>shoulder to shoulder</u>.
+        - Two disabled(adj. 残) men are running <ins>shoulder to shoulder</ins>.
     - 承担；扛
-        - <u>To some extent(在某种程度上)</u> *the housing sector* must shoulder the blame(责任).
+        - <ins>To some extent(在某种程度上)</ins> *the housing sector* must shoulder the blame(责任).
 - freely
     - adv. 不受限制地；自由地
 - shoot
@@ -52,17 +52,17 @@
     - n. 面包；生计，谋生之道
     - bur- == br- 烤，燃烧
     - 生计，谋生之道
-        - They are both <u>bread winners(赢得面包的人 -> 挣钱养家的人)</u> and housewives.
+        - They are both <ins>bread winners(赢得面包的人 -> 挣钱养家的人)</ins> and housewives.
 - basketball
 - hair
     - n. 头发，毛发
 - camp [kæmp]
     - n. 野营，营地； vi. 露营
-    - Suppose your university is going to host a <u>summer camp</u> for high school students.
+    - Suppose your university is going to host a <ins>summer camp</ins> for high school students.
         - summer camp 夏令营
 - lag [læɡ]
     - vi. 拖后腿，走得慢
-    - Graduates from elite([ɪˈliːt] 精英) universities tend to lag behind the others <u>due to(由于)</u> decreased
+    - Graduates from elite([ɪˈliːt] 精英) universities tend to lag behind the others <ins>due to(由于)</ins> decreased
       opportunities.
     - leg n. 腿
 - loser
@@ -95,7 +95,7 @@
     - 1(trillion),000(billion),000(million),000(thousand),000
 - terrible
     - adj. **糟糕的**；极度的；可怕的
-    - A clean copy <u>fresh off(刚刚完成/出炉)</u> a printer may look terrible.
+    - A clean copy <ins>fresh off(刚刚完成/出炉)</ins> a printer may look terrible.
     - terri- 恐怖
         - terror [ˈterər] n. 恐怖；可怕的人；恐怖的事
         - terrorist [ˈterərɪst] n. 恐怖分子
@@ -113,7 +113,7 @@
     - golden adj. 金色的；金制的
 - shore [ʃɔːr]
     - n. 海滨；vt. 支持，支撑(shore up)
-    - The government used subsidies(津贴) to <u>shore (up)</u> farm prices.
+    - The government used subsidies(津贴) to <ins>shore (up)</ins> farm prices.
     - share
 - funny
     - adj. 滑稽的；稀奇的；可笑的，稍感不适的
@@ -207,7 +207,7 @@
     - quar- 四
         - quarter 四分之一 [ˈkwɔːrtər]
     - 平方
-        - BMI equals <u>body mass(体重)</u> <u>divided by(除以)</u> the square of height.
+        - BMI equals <ins>body mass(体重)</ins> <ins>divided by(除以)</ins> the square of height.
 - fifth [fɪfθ]
 - honest
     - adj. 诚信的，正直的
@@ -349,7 +349,7 @@
 - cheat
     - vt. 欺骗； vi. 行骗；作弊； n. 舞弊
     - 作弊
-        - You can win by cheating <u>as long as(只要)</u> you don't get caught.
+        - You can win by cheating <ins>as long as(只要)</ins> you don't get caught.
 - dig
     - vt. 挖，掘； vi.挖掘；搜寻，寻找(dig for/into 搜寻)
     - Ground surveys(调查) allow archaeologists(考古学家) to pinpoint(查明) the places where digs will be successful.
@@ -372,9 +372,9 @@
         - deep
         - deem
     - be keen on 热衷于
-        - He <u>is keen on</u> learning anything new.
+        - He <ins>is keen on</ins> learning anything new.
     - be keen to 渴望做某事，极想做某事
-        - Lawyers <u>were keen to</u> attend conventions.
+        - Lawyers <ins>were keen to</ins> attend conventions.
 - blue
     - adj. 蓝色的；忧郁的
 - policymaker
