--- a/english/word/simple-word/markdown/p33-p35.md
+++ b/english/word/simple-word/markdown/p33-p35.md
@@ -28,9 +28,9 @@
 - corner
     - n. 角落； vt. 将...逼入困境
     - turn the corner 有转机，有好转
-        - Everyone said，"just wait，you'll <u>turn the corner</u>，give it some time".
+        - Everyone said，"just wait，you'll <ins>turn the corner</ins>，give it some time".
     - around the corner 出现
-        - A true cashless society([səˈsaɪəti] n. 社会) is probably not <u>around the corner</u>.
+        - A true cashless society([səˈsaɪəti] n. 社会) is probably not <ins>around the corner</ins>.
 - sixty
 - clip [klɪp]
     - v. **剪**，修剪； n. **片段**；回形针 
@@ -65,7 +65,7 @@
     - 一份，一部分
         - Three portions of fish and chips，please.
     - 分配 portion out
-        - Food was <u>portioned out</u> among(在...之中) the poor.
+        - Food was <ins>portioned out</ins> among(在...之中) the poor.
     - portion vs part
         - part 整体当中的一部分
         - portion 个体能拿到的一部分
@@ -168,13 +168,13 @@
     - 刷
         - A century ago，few people regularly brushed their teeth multiple([ˈmʌltɪpl]) times.
     - 触到 brush against
-        - He felt her hair <u>brushed against</u> his shoulder.
+        - He felt her hair <ins>brushed against</ins> his shoulder.
     - broom 笤帚
     - rush n. 冲 
 - August [ˈɔːɡəst]
 - excel
     - vi. 擅长，突出(excel in)
-    - ...to <u>excel in/at</u> making the connections...
+    - ...to <ins>excel in/at</ins> making the connections...
     - excellent adj. 优秀的，卓越的
     - excellence n. 优秀；卓越，杰出
 - Monday
@@ -202,7 +202,7 @@
 - pocket
     - n. **口袋**，小包；adj. 袖珍的，小型的
     - 口袋
-        - They go through the wallet or pocket of an <u>arrestee([əres'ti] 被捕者)</u>.
+        - They go through the wallet or pocket of an <ins>arrestee([əres'ti] 被捕者)</ins>.
 - personally
     - adv. 就本人而言；就个人意见
     - personally speaking 就个人而言
@@ -215,7 +215,7 @@
     - Tax policies are aimed at preventing the income gap form widening.
 - dairy [ˈderi]
     - n. 牛奶厂； adj. 奶制的
-    - Most land is used for meat and <u>dairy production(奶制品)</u>.
+    - Most land is used for meat and <ins>dairy production(奶制品)</ins>.
 - mend
     - v. 修理，修补； vi. 恢复健康，痊愈
     - 修理，修补
@@ -223,7 +223,7 @@
 - September [sepˈtembər]
 - atmospheric [ˌætməsˈferɪk]
     - adj. 大气层的，大气的 
-        - We must <u>press forward(推进/向前推进/大力开展)</u> on deeper atmospheric and oceanic(海洋 [ˌoʊʃiˈænɪk]) research.
+        - We must <ins>press forward(推进/向前推进/大力开展)</ins> on deeper atmospheric and oceanic(海洋 [ˌoʊʃiˈænɪk]) research.
     - atmosphere n. 大气层；空气；环境 [ˈætməsfɪr]
 - pop
     - vi. 突然出现；爆开； n. 流行音乐
@@ -292,7 +292,7 @@
     - van- 空
         - vanish [ˈvænɪʃ] 消失
         - vanity 虚荣心
-    - Americans <u>take a</u> vain <u>pride in</u> their long <u>life expectancy(预期寿命)</u>. 美国人对自己较长的寿命抱有虚荣的自豪感
+    - Americans <ins>take a</ins> vain <ins>pride in</ins> their long <ins>life expectancy(预期寿命)</ins>. 美国人对自己较长的寿命抱有虚荣的自豪感
         - take a...pride in 以...为傲/因...而感到自豪
 - activist
     - n. 活跃分子，积极分子
@@ -364,7 +364,7 @@
 - digit [ˈdɪdʒɪt]
     - n. 数字，数位 
     - digital
-    - The <u>digit/number/amount/sum</u> of crimes id increasing.
+    - The <ins>digit/number/amount/sum</ins> of crimes id increasing.
 - anger
 - rescue [ˈreskjuː]
     - vt./n. 营救 
@@ -376,4 +376,4 @@
         - sign- 标志
         - some of the nation's most significant diplomats(外交官, [ˈdɪpləmæts]) and politicians.
         - *大量的*
-            - It should <u>*account for(解释，占据)* a significant portion(占了很大比重)</u> of the grade.
+            - It should <ins>*account for(解释，占据)* a significant portion(占了很大比重)</ins> of the grade.
