--- a/english/word/simple-word/markdown/p36-p38.md
+++ b/english/word/simple-word/markdown/p36-p38.md
@@ -29,7 +29,7 @@
 - hungry
     - adj. 饥饿的
     - hunger n. 饥饿；渴望（hunger for）
-        - ...their great <u>hunger for</u> tech talent
+        - ...their great <ins>hunger for</ins> tech talent
     - hangry 饿怒症
 - tall
     - adj. 高的，身材高的
@@ -66,7 +66,7 @@
     - pearly [ˈpɜrli] adj. 珍珠的
 - instant
     - adj. 立即的，紧急的；速溶的
-    - It <u>is</u> fully <u>capable of</u> being restored in an instant.
+    - It <ins>is</ins> fully <ins>capable of</ins> being restored in an instant.
         - be capable of + doing 能够
     - instantly adv. 立刻，马上
     - install
@@ -115,7 +115,7 @@
     - grat- 感激，高兴
         - gratitude [ˈɡrætɪtuːd] n. 感激，感谢
     - be grateful to sb. for sth. 因某事而感激某人
-        - We <u>are</u> particularly <u>grateful to him for</u> his timely help.
+        - We <ins>are</ins> particularly <ins>grateful to him for</ins> his timely help.
 - dot
     - n. 点； vt. 点缀，打点与
 - pave [peɪv]
@@ -139,7 +139,7 @@
     - lect- == less- 说
         - lecture
     - 教训
-        - We can choose to <u>look for(吸取)</u> the lesson we<u>'re meant to</u> learn.
+        - We can choose to <ins>look for(吸取)</ins> the lesson we<ins>'re meant to</ins> learn.
             - be meant to 要去，应该
 - dietary [ˈdaɪɪˌtɛri]
     - adj. 与饮食有关的；饮食的
@@ -153,7 +153,7 @@
 - makeup
     - n. **组成，结构**；化妆品；天性
     - make up **组成**；**编造**；构成；化妆
-        - The homeless make up <u>a growing percentage of(越来越多的)</u> America's population.
+        - The homeless make up <ins>a growing percentage of(越来越多的)</ins> America's population.
         - 越来越多的
             - more and more
 - precious [ˈpreʃəs]
