--- a/english/word/simple-word/markdown/p39-p41.md
+++ b/english/word/simple-word/markdown/p39-p41.md
@@ -61,7 +61,7 @@
 - wire [ˈwaɪər]
     - n. 电线；电报；
         - hard-wired adj. **本能的，天生的**；硬链接的
-            - We can reduce or even <u>eliminate(清除)</u> the negative effects of our quick，hard-wired responses.
+            - We can reduce or even <ins>eliminate(清除)</ins> the negative effects of our quick，hard-wired responses.
 - slot [slɑːt]
     - n. 窄缝，扁口; （时间表、计划中的）时段，位置 v. 投放; 插入
 - rocket
@@ -69,7 +69,7 @@
     - Costs have rocketed and ticket prices have stayed low.
 - comedy  [ˈkɑːmədi]
     - n. 喜剧；滑稽，诙谐
-    - ...under the <u>incentive([ɪnˈsentɪv] 驱动)</u> of classical tragedy([ˈtrædʒədi] 悲剧) and comedy.
+    - ...under the <ins>incentive([ɪnˈsentɪv] 驱动)</ins> of classical tragedy([ˈtrædʒədi] 悲剧) and comedy.
 - tragedy  [ˈtrædʒədi]
   - n. 惨事，悲剧
 - golf
@@ -226,7 +226,7 @@
     - n. 菜单
 - spin
     - vi. **旋转**；眩晕
-    - Sit down to read and the <u>flywheel(飞轮)</u> of work-related thoughts keeps spinning.
+    - Sit down to read and the <ins>flywheel(飞轮)</ins> of work-related thoughts keeps spinning.
 - mate
     - n. 伙伴，配偶
 - classmate
@@ -234,7 +234,7 @@
     - n. **通行费**；**损失**；伤亡人数；v. 敲钟
     - Every entrance ticket lists a toll-free number.
     - 损失 take a toll on 对...造成损失
-        - Many everyday tasks <u>take</u> a surprising([sərˈpraɪzɪŋ]) <u>toll on</u> the environment.
+        - Many everyday tasks <ins>take</ins> a surprising([sərˈpraɪzɪŋ]) <ins>toll on</ins> the environment.
 - foam [foʊm]
     - n. 泡沫
 - excellence
@@ -253,7 +253,7 @@
           在欧洲君主被视为国家首脑最主要是因为他们不受争议的受人尊敬的地位。
     - owe [oʊ] v. **归因于**；欠
         - Most didn't realize they owed it and few paid.
-        - High achievers owe their success mostly to <u>nurture(培养)</u>.
+        - High achievers owe their success mostly to <ins>nurture(培养)</ins>.
 - toxic [ˈtɑːksɪk]
     - adj. 有毒的
 - harvest [ˈhɑːrvɪst]
@@ -303,10 +303,10 @@
     - 脱去；流出；散发；摆脱
         - US factories shed workers so fast.
     - shed light on 阐明；点亮；启发 = enlighten
-        - A recent annual([ˈænjuəl]) study <u>sheds</u> some <u>light on</u> that question.
+        - A recent annual([ˈænjuəl]) study <ins>sheds</ins> some <ins>light on</ins> that question.
 - beneath [bɪˈniːθ]
     - prep. 在...下面
-    - <u>It is</u> the masses beneath them <u>that(正是)</u> are left behind.
+    - <ins>It is</ins> the masses beneath them <ins>that(正是)</ins> are left behind.
     - under/below 在...下面
 - fetch
     - vt. 拿来，请来，叫来
