--- a/english/word/simple-word/markdown/p42-p44.md
+++ b/english/word/simple-word/markdown/p42-p44.md
@@ -5,7 +5,7 @@
 - beside [bɪˈsaɪd]
     - prep. 在...旁边
     - besides prep. 除...之外，还有
-        - We have lots of <u>thing in common(共同点)</u> besides music.
+        - We have lots of <ins>thing in common(共同点)</ins> besides music.
 - hospitalization
     - n. 医院治疗
 - scream
@@ -16,7 +16,7 @@
     - to serve as responsible stewards of the planet(行星).
 - hook [hʊk]
     - n. 钩子； vt. 钩住
-    - <u>Since(因为)</u> no baited(诱饵) hooks would have been available to trap them.
+    - <ins>Since(因为)</ins> no baited(诱饵) hooks would have been available to trap them.
     - 带上hook（钩子），来到brook(小溪)，水面look，手拿book，一边look，开始cook(烹饪)
 - coil [kɔɪl]
     - n. 卷，圈
@@ -85,7 +85,7 @@
     - 坟墓
         - ...some 10 million smokers went to early graves.
     - 严重的；庄重的
-        - There are many <u>caveats([ˈkeviˌæt] 警告)</u> to those figures([ˈfɪɡjər] 数字)，but they are still grave.
+        - There are many <ins>caveats([ˈkeviˌæt] 警告)</ins> to those figures([ˈfɪɡjər] 数字)，but they are still grave.
 - tomb [tuːm]
     - n. 坟墓
 - painting [ˈpeɪntɪŋ]
@@ -136,7 +136,7 @@
     - n. 道歉，认错
 - herd [hɜːrd]
     - n. 兽群，牧群
-    - ...habit rules the <u>unreflecting(反思)</u> herd.
+    - ...habit rules the <ins>unreflecting(反思)</ins> herd.
 - sow [soʊ]
     - vt. 播种
 - unchanged
@@ -171,7 +171,7 @@
 - magical
 - knot [nɑːt]
     - n. 结；v. 打结
-    - There are knots to be <u>worked out(解决，处理)</u>.
+    - There are knots to be <ins>worked out(解决，处理)</ins>.
 - bulb [bʌlb]
     - n. 电灯泡；球状物；球茎
     - bubble [ˈbʌbl] n. 泡泡，水泡
