--- a/english/word/simple-word/markdown/p48-p50.md
+++ b/english/word/simple-word/markdown/p48-p50.md
@@ -10,7 +10,7 @@
 - song
 - depth
     - n. 深度，纵深
-    - ...<u>obscuring(使模糊)</u> the depth and breadth of the challenge...
+    - ...<ins>obscuring(使模糊)</ins> the depth and breadth of the challenge...
 - facial [ˈfeɪʃl]
     - adj. 面部的
 - tropical [ˈtrɑːpɪkl]
@@ -232,7 +232,7 @@
     - n. 混乱，困境； vt. 弄乱，搞乱
     - in a mass
     - 弄乱 mess up
-        - <u>mess up</u> customer records
+        - <ins>mess up</ins> customer records
 - cab
     - n. 出租车，驾驶室
 - weep [wiːp]
