--- a/english/word/simple-word/markdown/p51-p54.md
+++ b/english/word/simple-word/markdown/p51-p54.md
@@ -67,13 +67,13 @@
     - n. 渔船，渔民
 - **halt** [hɔːlt]
     - n. 停止，暂停； v. 使停止
-    - ...help halt <u>spiraling(螺旋式上升)</u> rates of obesity.
+    - ...help halt <ins>spiraling(螺旋式上升)</ins> rates of obesity.
     - stop
 - jerk [dʒɜːrk]
     - n. 急拉，猛推
 - **litter** [ˈlɪtər]
     - n. 垃圾； v. 丢垃圾
-    - There will be <u>fines(罚金)</u> for people who drop litter.
+    - There will be <ins>fines(罚金)</ins> for people who drop litter.
     - He was arrested for littering.
 - shower [ˈʃaʊər]
     - n. 洗澡
@@ -136,7 +136,7 @@
     - adj. 热量的
 - **clause** [klɔːz]
     - n. **条款**；从句，分句
-    - ...a clause that counted a slave as <u>three fifths(五分之三)</u> of a man...
+    - ...a clause that counted a slave as <ins>three fifths(五分之三)</ins> of a man...
     - v. .. as 把...视为
 - lonely
     - adj. 孤独的，独自的
@@ -301,7 +301,7 @@
     - vt. 发音；宣布，宣判
     - pronounciation n. 发音
     - pronouncement n. 宣布
-    - Letting <u>vague(模糊)</u> pronouncements cloud their <u>reputations(声誉)</u>
+    - Letting <ins>vague(模糊)</ins> pronouncements cloud their <ins>reputations(声誉)</ins>
 - **chemist** [ˈkemɪst]
     - n. 化学家；药剂师
     - chemical adj. 化学的
@@ -348,7 +348,7 @@
     - The hotel was in a beautiful position amid lemon trees.
     - between 两者之间
     - among 三者及以上之间
-        - The money was distributed <u>amid/amidst/among/between</u> four schools in the arrow.
+        - The money was distributed <ins>amid/amidst/among/between</ins> four schools in the arrow.
 - headquarters
     - n. 总部
 - **edition**
