--- a/english/word/simple-word/markdown/p55-p58.md
+++ b/english/word/simple-word/markdown/p55-p58.md
@@ -141,7 +141,7 @@
     - the use of mobile phones and tablets
 - **ego**
     - n. 自我，自己(偏消极）
-    - It brings together great wealth，enormous egos，greed，and <u>controversy(争议)</u>.
+    - It brings together great wealth，enormous egos，greed，and <ins>controversy(争议)</ins>.
 - incorrectly
     - adv. 不正确地，错误地
 - kilo/kilgram
@@ -158,7 +158,7 @@
     - n. 胡萝卜
 - verge
     - vi. **接近，濒临**（verge on）；n. 边缘
-    - Some of his suggestions verged on the <u>outrageous(荒唐)</u>
+    - Some of his suggestions verged on the <ins>outrageous(荒唐)</ins>
 - racket
     - n. 喧闹；诈骗；敲诈；（网球等）球拍
 - wheat
@@ -198,7 +198,7 @@
     - no meat，no fur，no medicines([ˈmedɪsn])
 - **inn**
     - n. 小旅馆，客栈
-    - <u>Caravanserais(商栈)</u> were roadside inns that werebuilt along the <u>Silk Road(丝绸之路)</u>.
+    - <ins>Caravanserais(商栈)</ins> were roadside inns that werebuilt along the <ins>Silk Road(丝绸之路)</ins>.
 - grass
 - lawn
     - n. 草地，草坪
