--- a/english/word/simple-word/markdown/p6-p8.md
+++ b/english/word/simple-word/markdown/p6-p8.md
@@ -38,7 +38,7 @@
 - small
 - try
     - try to do 尝试做某事，尚未取得成功
-        - try to wake up just enough to control <u>the course of bad dreams(噩梦的发展过程、走向)</u>.
+        - try to wake up just enough to control <ins>the course of bad dreams(噩梦的发展过程、走向)</ins>.
 - city
 - better
     - good/well, better, best
@@ -127,7 +127,7 @@
     - **adj./adv. 努力的**: Everyone should try hand to promote social justice.
     - adj./adv. 猛烈的: But because hard laughter is difficult to maintain...
 - play
-    - n. 竞争: That once could <u>count on(依赖，指望)</u> hard work and fair play.
+    - n. 竞争: That once could <ins>count on(依赖，指望)</ins> hard work and fair play.
     - n. 戏剧: musical play
 - themselves
 - translation
