--- a/english/word/simple-word/markdown/p9-p11.md
+++ b/english/word/simple-word/markdown/p9-p11.md
@@ -9,12 +9,12 @@
     - digit n. 数字，**数位**（7位数）
         - number 数量(可数n.)
         - amount 数量(不可数n.)
-        - The <u>number/amount/digit</u> of experiments is increasing.
+        - The <ins>number/amount/digit</ins> of experiments is increasing.
 - fast
 - return
     - vi. 返回；
     - n. 返回，归还
-        - Accepting favors <u>in return for</u> opening doors is "distasteful([dɪsˈtestfəl] 令人厌恶的)".
+        - Accepting favors <ins>in return for</ins> opening doors is "distasteful([dɪsˈtestfəl] 令人厌恶的)".
             - in return for 作为对...的回报
     - vi. 恢复
         - Train services have returned to normal after the strike of the flu(流感).
@@ -182,12 +182,12 @@
     - adj. 普遍的，一般的
     - n. 将军
     - in general 一般而言
-        - <u>In general</u>, nearly all the students feel good about the class.
+        - <ins>In general</ins>, nearly all the students feel good about the class.
     - generally [ˈdʒenrəli] adv. 普遍地
 - together
     - gather n./v. 聚集，集合: They gather all the data the can. 他们收集了所有能收集到的数据
 - underline
-    - vt. 强调，使突出: President Trump had underline <u>fossil fuels(化石燃料)</u>.
+    - vt. 强调，使突出: President Trump had underline <ins>fossil fuels(化石燃料)</ins>.
     - vt. 下划线: The underline sentence (Para.1) most probably shows that the court([kɔːrt]).
 - record
     - n. 记录 v. 记录；录音
@@ -215,7 +215,7 @@
 - drug [drʌɡ]
     - n. 药物
     - n. 毒品, 与 alcohol([ˈælkəhɔːl] 酒精)/tobacco([təˈbækoʊ] 烟草) 连用
-        - Many homeless adults <u>are addicted([əˈdɪktɪd]) to</u> alcohol or drug.
+        - Many homeless adults <ins>are addicted([əˈdɪktɪd]) to</ins> alcohol or drug.
             - be addicted to 对...上瘾
 - event
     - n. 事件，大事 （= affair） a thing that happens, especially sth **important**
@@ -274,7 +274,7 @@
 - moment
     - n. 时刻，瞬间: Think about the present moment.
     - take a moment 花一段时间
-        - We can <u>take a moment</u> before buying.
+        - We can <ins>take a moment</ins> before buying.
 - nearly
     - adv. 几乎，差不多
     - nearby adj. 附近的； adv. 在附近
