--- a/english/word/simple-word/markdown/p12-p14.md
+++ b/english/word/simple-word/markdown/p12-p14.md
@@ -7,7 +7,7 @@
     - n. 文章；（物品的）一件
     - art- 连接
     - 物品的一件
-        - ...<u>instead of</u> Shopping alone, one article of clothing at a time(次数). 不要一个人去购物，也不要一次只买一件衣服
+        - ...<ins>instead of</ins> Shopping alone, one article of clothing at a time(次数). 不要一个人去购物，也不要一次只买一件衣服
             - A instead of B == A rather than B 是A而不是B（选择前边而不选择后边）
 - forest [ˈfɔːrɪst]
     - n. 森林
@@ -33,7 +33,7 @@
     - n. 数量，总额（不可数）； vi 合计
     - number 可数
     - a large amount of 大量的: a large amount of personal data.
-    - amount to 合计，总计: Our debts(债务) <u>amount to</u> $1000.
+    - amount to 合计，总计: Our debts(债务) <ins>amount to</ins> $1000.
 - earn
     - vt. 赚得，获得
     - earn their living 谋生
@@ -225,7 +225,7 @@
         - What is graphically([ˈɡræfɪklɪ] 形象的) and explicitly([ɪk'splɪsɪtlɪ] 明确的) depicted in the simple yet eye-catching drawing is that...
           在简单而引人注目的图画中，以图形和明确的方式描绘的是
     - 赶上 catch up
-        - while still <u>catching up</u> in some spheres([sfɪr]) of modern life... 在现代生活的某些领域仍在努力追赶
+        - while still <ins>catching up</ins> in some spheres([sfɪr]) of modern life... 在现代生活的某些领域仍在努力追赶
 - colleague [ˈkɑːliːɡ]
     - n. 同事
     - college [ˈkɑːlɪdʒ]
@@ -257,10 +257,10 @@
     - n. 其余的人或物
     - for the rest of us 对于我们其他的人
     - vi. 依靠 rest on/upon
-        - Good governance([ˈɡʌvərnəns] n. 统治; 管理; 支配;) <u>rests on</u> an understanding of... 良好的治理建立在对...的理解之上。
+        - Good governance([ˈɡʌvərnəns] n. 统治; 管理; 支配;) <ins>rests on</ins> an understanding of... 良好的治理建立在对...的理解之上。
 - introduce
     - v. 介绍；引进
-    - The gardens of the homeless <u>introduce from into</u> an urban environment. 无家可归者的花园将人们引入城市环境
+    - The gardens of the homeless <ins>introduce from into</ins> an urban environment. 无家可归者的花园将人们引入城市环境
         - introduce sth. into 把...引进到
 - baby
 - dioxide [daɪˈɑːksaɪd]
@@ -307,7 +307,7 @@
     - n. 交谈 
 - aspect [ˈæspekt]
     - n. 样貌；方面
-    - First，scientific work(研究) <u>tends to(往往)</u> focus on some aspect of prevailing(盛行的) knowledge...
+    - First，scientific work(研究) <ins>tends to(往往)</ins> focus on some aspect of prevailing(盛行的) knowledge...
     - facade [fəˈsɑːd] n. 外表; 虚伪，假象
         - Facade Pattern([ˈpætərn]) 门面模式
 - farm
@@ -364,9 +364,9 @@
 - pace
     - n. 步伐；速度
     - keep pace with 与...保持一致
-        - This year's increase in rail passengers fares has <u>kept pace with</u> inflation. 今年铁路客运票价的上涨与通货膨胀保持同步
+        - This year's increase in rail passengers fares has <ins>kept pace with</ins> inflation. 今年铁路客运票价的上涨与通货膨胀保持同步
     - pick pace 提速，加速
-        - Human evolution <u>picked pace</u> in the last 30000 years.
+        - Human evolution <ins>picked pace</ins> in the last 30000 years.
 - seven
 - sleep
     - v. 睡眠
