--- a/english/word/simple-word/markdown/p45-p47.md
+++ b/english/word/simple-word/markdown/p45-p47.md
@@ -75,7 +75,7 @@
 - fond [fɑːnd]
     - adj. 喜爱的；充满柔情的
     - be fond of 长期的喜爱
-    - Defenders([dɪ'fendəz] 捍卫者) of the corporation <u>are fond of</u> quoting the American slogan.
+    - Defenders([dɪ'fendəz] 捍卫者) of the corporation <ins>are fond of</ins> quoting the American slogan.
 - tease [tiːz]
     - vt. 戏弄，取笑
 - teenage [ˈtiːneɪdʒ]
@@ -83,9 +83,9 @@
 - buck [bʌk]
     - n. 雄鹿；美元；纨绔子弟；年轻小伙子；vt. 抵制
     - bang for the buck 划算，合算
-        - The food was excellent and the prices were not too bad，so we got a lot of <u>bang for the buck<\u>.
+        - The food was excellent and the prices were not too bad，so we got a lot of <ins>bang for the buck<\u>.
     - 抵制
-        - More families buck an older-generation <u>inclination(倾向)</u>.
+        - More families buck an older-generation <ins>inclination(倾向)</ins>.
 - uncomfortable
     - adj. 令人不舒服的
 - haze [heɪz]
@@ -158,7 +158,7 @@
 - donate [ˈdoʊneɪt]
     - v. 捐赠，赠送
     - do- 给予
-    - Customers may be willing to buy a company's products as an indirect way to donate to the good <u>causes(事业)</u> it helps.
+    - Customers may be willing to buy a company's products as an indirect way to donate to the good <ins>causes(事业)</ins> it helps.
 - edge [edʒ]
     - n. **边缘**; v. 侧着移动
 - regrettable [rɪˈɡretəbl]
@@ -194,7 +194,7 @@
     - faithful partners
     - faith n. 信仰，信念，信任
         - have/loose faith in 有/失去...信心
-            - It more or less <u>lose faith in</u> markets.
+            - It more or less <ins>lose faith in</ins> markets.
     - faithfully adv. 忠实地; 诚心诚意地; 如实地
 - dropout [ˈdrɑːpaʊt]
     - n. 辍学者；退学者
@@ -241,7 +241,7 @@
 - bleed [bliːd]
     - vi. 出血； vt. 勒索...的钱财
     - bleed red ink 有严重的经济问题
-        - The <u>U.S. Postal Service(美国邮政局)</u> continues to <u>bleed red ink</u>.
+        - The <ins>U.S. Postal Service(美国邮政局)</ins> continues to <ins>bleed red ink</ins>.
     - blood [blʌd] n.
     - bleed - bled - bled
 - murder [ˈmɜːrdər]
@@ -316,7 +316,7 @@
     - n. 画家；油漆匠
 - bunch [bʌntʃ]
     - n. **群，束，捆**； vi. 挤在一起； vi. 使成一束
-    - <u>a bunch of</u> flower 一束花
+    - <ins>a bunch of</ins> flower 一束花
     - 挤在一起
         - His muscles bunched under his shirt.
 - outdoors
@@ -328,5 +328,5 @@
     - season [ˈsiːzn] n. 季节；时期； vt. 给...调味
 - recycling [ˌri'saɪklɪŋ]
     - n. 回收利用
-    - ...ensuring recycling is at least <u>as easy as(至少)</u> <u>trash disposal(废物处理)</u>.
+    - ...ensuring recycling is at least <ins>as easy as(至少)</ins> <ins>trash disposal(废物处理)</ins>.
 - April [ˈeɪprəl]
