--- a/math/linear_algebra/vector.tex
+++ b/math/linear_algebra/vector.tex
@@ -98,11 +98,17 @@
     \subsection{定理}
 
     \begin{enumerate}
-        \item 向量组$\alpha_1, \alpha_2, \dots, \alpha_s$线性相关
+        \item 向量组$\alpha_1, \alpha_2, \dots, \alpha_s${\color[rgb]{0.2, 0.6, 0.3}{线性相关}}
         \begin{align*}
             &\Leftrightarrow\; \text{其次线性方程组}[\alpha_1, \alpha_2, \dots, \alpha_s][x_1, x_2, \dots, x_n]^T = 0\text{有非零解} \\
-            &\Leftrightarrow\; \text{向量组的秩}r(\alpha_1, \alpha_2, \dots, \alpha_s) < s, s\text{表示}\textbf{未知数的个数}\text{或}\textbf{向量个数} \\
-            &\Leftrightarrow\; \text{若向量组是{\color{red}{方阵}}($n$个$n$维向量)，则}|\alpha_1, \alpha_2, \dots, \alpha_n| = 0
+            &\Leftrightarrow\; r(\alpha_1, \alpha_2, \dots, \alpha_s) < s, s\text{表示}\textbf{未知数的个数}\text{或}\textbf{向量个数} \\
+            &\Leftrightarrow\; \color{red}{|\alpha_1, \alpha_2, \dots, \alpha_n| = 0}
+        \end{align*}
+        \item 向量组$\alpha_1, \alpha_2, \dots, \alpha_s${\color{red}{线性无关}}
+        \begin{align*}
+            &\Leftrightarrow\; \text{其次线性方程组}[\alpha_1, \alpha_2, \dots, \alpha_s][x_1, x_2, \dots, x_n]^T = 0\text{只有零解} \\
+            &\Leftrightarrow\; r(\alpha_1, \alpha_2, \dots, \alpha_s) = s, s\text{表示}\textbf{未知数的个数}\text{或}\textbf{向量个数} \\
+            &\Leftrightarrow\; \color{red}{|\alpha_1, \alpha_2, \dots, \alpha_n| \neq 0}
         \end{align*}
         \item 向量组的秩$r(\alpha_1, \alpha_2, \dots, \alpha_s) = s \Leftrightarrow \alpha_1, \alpha_2, \dots, \alpha_s$线性无关
         \item $n+1$个$n$维向量一定线性相关
@@ -155,6 +161,7 @@
     \subsection{方法步骤}
 
     \begin{enumerate}
+        \item $\beta$可由$\alpha_1, \alpha_2, \alpha_3$，求表达式？？？
         \item 判断多个向量是否线性相关
         \begin{itemize}
             \item 含有零向量 $\mathbf{0}$ $\Rightarrow$ 线性相关
@@ -215,6 +222,20 @@
             \]
             \item 若存在$r$阶子式不为零，则$r$为矩阵的秩，对应的$r$个向量构成一组最大线性无关组
         \end{itemize}
+        \item 分析、讨论一个向量组$\beta_1, \beta_2, \beta_3$能够由$\alpha_1, \alpha_2, \alpha_3$线性表出
+        \begin{enumerate}
+            \item 定义: 是否存在系数$c_1, c_2, c_3$使得
+            \[
+                \beta_i = c_{1i}\alpha_1 + c_{2}\alpha_2 + c_{3i}\alpha_3
+            \]对每一个$i = 1, 2, 3$都成立
+            \item 向量组$B(\beta_1, \beta_2, \beta_3)$能由$A(\alpha_1, \alpha_2, \alpha_3)$线性表出
+            \begin{align*}
+                &\Leftrightarrow\; B\text{中的每个向量都是}A\text{的线性组合} \\
+                &\Leftrightarrow\; r(A) = r(A, B) \text{加上}B\text{中的向量后秩不变，说明这些向量能有}A\text{线性表出} \\
+                &\Leftrightarrow\; \text{若}B\text{线性无关} \Rightarrow A\text{线性无关} \\
+                &\Leftrightarrow\; \text{若}B\text{线性相关} \Rightarrow A\text{线性相关}
+            \end{align*}
+        \end{enumerate}
     \end{enumerate}
 
     \subsection{条件转换思路}
@@ -279,6 +300,32 @@
                 \item \textbf{无表示:}$\; r(A) < r(A,\beta)$，$\beta$ 不能由 $(\alpha_1,\dots,\alpha_n)$ 线性表示
             \end{enumerate}
         \end{itemize}
+        \item 设向量组$\alpha_1 = (1,0,1)^T, \alpha_2 = (0,1,1)^T, \alpha_3 = (1,3,5)^T$不能由向量组$\beta_1 = (1,1,1)^T, \beta_2 = (1,2,3)^T, \beta_3 = (3,4,a)^T$线性表示。求$a$的值并将$\beta_1, \beta_2, \beta_3$用$\alpha_1, \alpha_2, \alpha_3$线性表出
+        \begin{analysisbox}
+            \[
+                \because |\alpha_1, \alpha_2, \alpha_3| = 1 \neq 0
+            \]
+            又因为$\alpha_1, \alpha_2, \alpha_3$不能由$\beta_1, \beta_2, \beta_3$线性表示， \\
+            4个三维向量必线性相关，若$\beta_1, \beta_2, \beta_3$线性无关，那么$\alpha_1, \alpha_2, \alpha_3$必可由$\beta_1, \beta_2, \beta_3$线性表出 \\
+            所以$\beta_1, \beta_2, \beta_3$线性相关 \\
+            即$|\beta_1, \beta_2, \beta_3| = 0$ \\
+            故$a = 5$ \\
+            对$[\alpha_1, \alpha_2, \alpha_3 | \beta_1, \beta_2, \beta_3]$作初等变换，有
+            \[
+                \left[
+                    \begin{array}{ccc|ccc}
+                        1 & 0 & 1 & 1 & 1 & 3 \\
+                        0 & 1 & 3 & 1 & 2 & 4 \\
+                        1 & 1 & 5 & 1 & 3 & 5
+                    \end{array}\right] \rightarrow \left[\begin{array}{ccc|ccc}
+                                                             1 & 0 & 0 & 2  & 1 & 5  \\
+                                                             0 & 1 & 0 & 4  & 2 & 10 \\
+                                                             0 & 0 & 1 & -1 & 0 & -2
+                \end{array}\right]
+            \]
+
+            所以$\beta_1 = 2\alpha_1 + 4\alpha_2 - \alpha_3, \beta_2 = \alpha_1 + 2\alpha_2, \beta_3 = 5\alpha_1 + 10\alpha_2 - 2\alpha_3$
+        \end{analysisbox}
     \end{enumerate}
 
 \end{document}
